[package]
name = "accel-stepper"
version = "0.1.1-alpha.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "A library for controlling stepper motors."
repository = "https://gitlab.com/Michael-F-Bryan/accel-stepper"
readme = "README.md"
keywords = ["stepper", "stepper-motor", "motor", "AccelStepper"]
categories = ["embedded", "hardware-support", "no-std"]
license = "GPL-2.0"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.1.4"
#embedded-hal = { version = "0.2.3", optional = true }
arrayvec = {version="0.7.4", default-features=false}

[features]
default = []
std = []
#hal = ["embedded-hal"]
